--- a/index.html
+++ b/index.html
@@ -3,164 +3,102 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angela Minardi - Network Engineer Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <title>Angela Minardi - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Angela Minardi</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <header id="about" class="bg-primary text-white text-center py-5">
-        <div class="container">
-            <h1 class="display-4 mb-4">Angela Minardi</h1>
-            <p class="lead mb-4">Aspiring Network Engineer | Computer Science Student</p>
-            <p class="mb-4">Washington DC, USA (Open to Relocation)</p>
-            <div class="d-flex justify-content-center">
-                <a href="mailto:r.minardi.angela@gmail.com" class="btn btn-light me-3">
-                    <i class="fas fa-envelope me-2"></i>r.minardi.angela@gmail.com
-                </a>
-                <a href="tel:301-775-6380" class="btn btn-light">
-                    <i class="fas fa-phone me-2"></i>(301) 775-6380
-                </a>
-            </div>
-        </div>
+    <header>
+        <h1>Angela Minardi</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+    <main>
+        <!-- About Me Section -->
+        <section id="about">
+            <h2>About Me</h2>
+            <p>
+                <strong>Location:</strong> 18611 Mink Hollow Rd, Highland, MD 20777<br>
+                <strong>Phone:</strong> (301) 775-6380<br>
+                <strong>Email:</strong> <a href="mailto:r.minardi.angela@gmail.com">r.minardi.angela@gmail.com</a>
+            </p>
+            <h3>Education</h3>
+            <p>
+                <strong>Western Governor’s University</strong><br>
+                Bachelor of Science, Computer Science<br>
+                Anticipated Graduation: Fall 2024
+            </p>
+            <p><em>Relevant Coursework:</em> Object Oriented Programming I and II, Data Structures and Algorithms,
+                Database Design, Network Security Foundations</p>
+            <h3>Technical Skills</h3>
+            <ul>
+                <li><strong>Networking:</strong> Studying for CCNA certification, TCP/IP protocols, OSI Model, Network
+                    troubleshooting</li>
+                <li><strong>Programming Languages:</strong> Java, Python, C++, C#</li>
+                <li><strong>Data Processing:</strong> Oracle SQL database design, Microsoft Azure IoT Hub, AWS Cloud
+                    Computing</li>
+            </ul>
+        </section>
 
-    <main class="container my-5">
-        <section id="education" class="mb-5">
-            <h2 class="section-title text-center mb-4">Education</h2>
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h3 class="card-title">Bachelor of Science, Computer Science</h3>
-                    <p class="card-text text-muted">Western Governors University (Expected Graduation: 12/2024)</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">ABET-accredited program</li>
-                        <li class="list-group-item">Certifications: ITIL Foundation Certification, Linux Essentials
-                            Certification</li>
-                        <li class="list-group-item">Relevant coursework: Data Structures and Algorithms, Software
-                            Engineering, Computer Architecture, Operating Systems, Artificial Intelligence</li>
-                    </ul>
-                </div>
+        <!-- Projects Section -->
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>5G Wireless Network Simulation</h3>
+                <p>Developed a simulation tool to model and analyze the performance of 5G wireless networks using NS-3.
+                </p>
+                <ul>
+                    <li>Simulated key performance metrics like throughput, latency, and packet loss.</li>
+                    <li>Configured gNB and UE nodes with mobility models.</li>
+                    <li>Implemented data traffic to analyze network performance.</li>
+                </ul>
+                <a href="#contact">Contact me for more details</a>
+            </div>
+            <div class="project">
+                <h3>Blockchain Implementation</h3>
+                <p>Built a simplified blockchain from scratch to understand distributed ledger technology.</p>
+                <ul>
+                    <li>Implemented core concepts like blocks, transactions, and consensus algorithms.</li>
+                    <li>Used cryptographic hashing to secure block data.</li>
+                    <li>Simulated a peer-to-peer network to demonstrate decentralization.</li>
+                </ul>
+                <a href="#contact">Contact me for more details</a>
+            </div>
+            <div class="project">
+                <h3>AI-Powered Chatbot</h3>
+                <p>Created a chatbot using machine learning for natural language processing and understanding.</p>
+                <ul>
+                    <li>Developed using Python and TensorFlow.</li>
+                    <li>Trained on a dataset to respond to user inputs in a conversational manner.</li>
+                    <li>Implemented using a web interface for user interaction.</li>
+                </ul>
+                <a href="#contact">Interact with the chatbot</a>
             </div>
         </section>
 
-        <section id="skills" class="mb-5">
-            <h2 class="section-title text-center mb-4">Skills</h2>
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <h3 class="card-title text-center mb-4">Networking</h3>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">TCP/IP protocols</li>
-                                <li class="list-group-item">OSI Model</li>
-                                <li class="list-group-item">Network troubleshooting</li>
-                                <li class="list-group-item">Studying for Cisco Certified Network Associate (CCNA)
-                                    certification</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <h3 class="card-title text-center mb-4">Programming Languages</h3>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Java</li>
-                                <li class="list-group-item">Python</li>
-                                <li class="list-group-item">C++</li>
-                                <li class="list-group-item">C#</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <h3 class="card-title text-center mb-4">Data Processing</h3>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Oracle SQL database design</li>
-                                <li class="list-group-item">Microsoft Azure IOT Hub</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <!-- Contact Section -->
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>If you're interested in my work or have any questions, feel free to reach out!</p>
+            <form action="mailto:r.minardi.angela@gmail.com" method="POST" enctype="text/plain">
+                <label for="name">Name:</label><br>
+                <input type="text" id="name" name="name" required><br>
 
-        <section id="projects" class="mb-5">
-            <h2 class="section-title text-center mb-4">Projects</h2>
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h3 class="card-title">Fall Prevention Smart Insole</h3>
-                    <p class="card-text text-muted">2023 - Present</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Developed a real-time gait analysis system utilizing ESP32, force
-                            sensing resistors, and inertial measurement units to monitor and improve mobility.</li>
-                        <li class="list-group-item">Integrated MQTT for efficient real-time data transmission, enhancing
-                            fall risk prediction by analyzing sequential gait data.</li>
-                        <li class="list-group-item">Utilized AWS for high-capacity data processing and storage,
-                            supporting scalable machine learning model improvements.</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email" required><br>
 
-        <section id="experience" class="mb-5">
-            <h2 class="section-title text-center mb-4">Experience</h2>
-            <div class="card shadow-sm mb-4">
-                <div class="card-body">
-                    <h3 class="card-title">Sales Associate - Keyholder</h3>
-                    <p class="card-text text-muted">PetValu, Olney, USA</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Enhanced customer satisfaction by resolving their concerns quickly
-                            and efficiently, reducing complaints.</li>
-                        <li class="list-group-item">Developed strong customer relationships through personalized
-                            service.</li>
-                        <li class="list-group-item">Managed inventory levels and restocked shelves to ensure product
-                            availability, monitoring supply levels of items across multiple brands.</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h3 class="card-title">Startup Shell (Tech-Startup Accelerator)</h3>
-                    <p class="card-text text-muted">Member at University of Maryland</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Chosen as one of 32 members from a pool of over 200 applicants.</li>
-                        <li class="list-group-item">Actively participated in technology-driven projects, focusing on
-                            innovative solutions and entrepreneurial development.</li>
-                    </ul>
-                </div>
-            </div>
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message" rows="5" required></textarea><br>
+
+                <input type="submit" value="Send">
+            </form>
         </section>
     </main>
-
-    <footer class="bg-light text-center py-3">
-        <p class="mb-0">&copy; 2024 Angela Minardi. All rights reserved.</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 
