--- a/project2.html
+++ b/project2.html
@@ -3,57 +3,73 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Blockchain Implementation</title>
+    <title>Blockchain Implementation - Angela Minardi</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Montserrat:600&display=swap" rel="stylesheet">
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <!-- Navigation Bar -->
     <nav>
         <div class="container">
-            <h1 class="logo"><a href="index.html">Angela Minardi</a></h1>
+            <a href="index.html" class="logo">Angela Minardi</a>
+            <div class="nav-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
             <ul class="nav-links">
-                <li><a href="index.html#about">About Me</a></li>
+                <li><a href="index.html#hero">Home</a></li>
+                <li><a href="index.html#about">About</a></li>
                 <li><a href="index.html#education">Education</a></li>
-                <li><a href="index.html#skills">Technical Skills</a></li>
+                <li><a href="index.html#skills">Skills</a></li>
                 <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
 
-    <!-- Project Content -->
+    <!-- Project Detail Section -->
     <section id="project-detail">
         <div class="container">
             <h2>Blockchain Implementation</h2>
-            <img src="images/project2.jpg" alt="Blockchain Implementation">
-            <p>
-                This project involved building a simplified blockchain from scratch to understand the underlying
-                mechanisms of distributed ledger technology. The blockchain supports basic functionalities such as
-                adding transactions, mining blocks, and validating the chain.
-            </p>
-            <h3>Key Features:</h3>
-            <ul>
-                <li>Implemented Proof of Work consensus algorithm</li>
-                <li>Used cryptographic hashing for block security</li>
-                <li>Simulated a network of nodes for decentralization</li>
-            </ul>
-            <h3>Technologies Used:</h3>
-            <ul>
-                <li>Python programming language</li>
-                <li>Flask for web interface (optional)</li>
-                <li>Hashlib library for hashing functions</li>
-            </ul>
-            <a href="https://github.com/yourgithub/blockchain-implementation" class="btn" target="_blank">View Code on
-                GitHub</a>
+            <div class="project-detail-content">
+                <img src="images/project2.jpg" alt="Blockchain Implementation" class="detail-img">
+                <p>
+                    This project involved building a simplified blockchain from scratch to understand the underlying
+                    mechanisms of distributed ledger technology. The blockchain supports basic functionalities such as
+                    adding transactions, mining blocks, and validating the chain.
+                </p>
+                <h3>Key Features:</h3>
+                <ul>
+                    <li>Implemented Proof of Work consensus algorithm</li>
+                    <li>Used cryptographic hashing for block security</li>
+                    <li>Simulated a network of nodes for decentralization</li>
+                </ul>
+                <h3>Technologies Used:</h3>
+                <ul>
+                    <li>Python programming language</li>
+                    <li>Flask for web interface (optional)</li>
+                    <li>Hashlib library for hashing functions</li>
+                </ul>
+                <a href="https://github.com/yourgithub/blockchain-implementation" class="btn" target="_blank"><i
+                        class="fab fa-github"></i> View Code on GitHub</a>
+            </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2023 Angela Minardi. All rights reserved.</p>
+            <p>&copy; 2024 Angela Minardi. All rights reserved.</p>
         </div>
-    </footer></body>
+    </footer>
+
+    <!-- JavaScript -->
+    <script src="js/script.js"></script>
+</body>
 
 </html>
